# mcp-server-jira

./: .env.example  .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  jira_mcp_cli.py  mcp.json  mcp.json.alternative  mcp.md  pyproject.toml  requirements.txt  setup.py
docs/: mcp.md
examples/: example_usage.md  simple_fastmcp_server.py
scripts/: publish.sh
src/: __init__.py  config.py  server.py
src/jira_mcp/: __init__.py  __main__.py
src/scripts/: __init__.py  download_all_attachments.py  extract_attachment.py  get_issue_attachments.py
